--- a/src/Components/about/about.css
+++ b/src/Components/about/about.css
@@ -1,6 +1,7 @@
 .about__container{
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
+  margin-bottom: var(--mb-3);
 }
 
 .about__img{
