--- a/src/Components/about/about.css
+++ b/src/Components/about/about.css
@@ -2,6 +2,7 @@
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   margin-bottom: var(--mb-3);
+  margin-bottom: 10rem;
 }
 
 .about__img{
