--- a/src/Components/header/header.css
+++ b/src/Components/header/header.css
@@ -7,6 +7,10 @@
   background-color: var(--body-color);
 }
 
+.logo{
+  width: 5rem;
+}
+
 .nav {
   height: calc(var(--header-height) + 1.5rem);
   display: flex;
