--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -1,6 +1,6 @@
 .home__container {
   row-gap: 7rem;
-  margin-bottom: 4.5rem;
+  margin-bottom: 10rem;
 }
 
 .home__content {
@@ -16,16 +16,17 @@
   row-gap: 1rem;
 }
 
+
+
 .home__social-icon {
   font-size: 1.25rem;
   color: var(--title-color);
-  transition: .3s all ease-in-out;
 }
 
-.home__social-icon:hover {
-  font-size: 1.60rem;
-  color: #7ac16f;
+.home__social-icon:hover{
+  color: var(--color-green);
 }
+
 
 .home__subtitle{
   display: flex;
@@ -49,8 +50,9 @@
   margin-bottom: var(--mb-0-25);
   display: flex;
   justify-content: center;
-
 }
+
+
 
 
 .home__img{
@@ -122,9 +124,17 @@
   }
 }
 
+
+
+
+
+
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 992px) {
+
+  
+
   .home__content {
     grid-template-columns: 100px repeat(2, 1fr);
     column-gap: 1.2rem;
@@ -154,6 +164,11 @@
 
 /* For medium devices */
 @media screen and (max-width: 768px) {
+
+  .home__container {
+  margin-top: 4rem;
+}
+
   .home__content {
     grid-template-columns: 1.5fr 3fr;
     padding-top: 3.5rem;
@@ -178,6 +193,8 @@
   .home__scroll{
     display: none;
   }
+
+
 }
 
 
