--- a/src/Components/skills/skills.css
+++ b/src/Components/skills/skills.css
@@ -1,7 +1,8 @@
 .skills__container{
   grid-template-columns: repeat(3, 320px);
-  column-gap: 0.5rem;
+  column-gap: 0.8rem;
   justify-content: center;
+  margin-bottom: 10rem;
 }
 
 .skills__content{
@@ -9,7 +10,6 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 2rem 1rem;
   border-radius: 1.25rem;
-
 }
 
 .skills__title {
