--- a/src/App.css
+++ b/src/App.css
@@ -211,6 +211,14 @@ img {
 }
 
 @media screen and (max-width: 576px) {
+  .services__modal-content {
+    padding: 4.5rem 1.5rem 2.5rem;
+    width: max-content;
+  }
+
+  .services__modal-description {
+    padding: 0;
+  }
 }
 
 /* For small devices */
