--- a/src/Components/services/services.css
+++ b/src/Components/services/services.css
@@ -138,6 +138,17 @@
   }
 }
 
+@media screen and (max-width: 576px) {
+  .services__modal-content {
+    padding: 4.5rem 1.5rem 2.5rem;
+    width: max-content;
+  }
+
+  .services__modal-description {
+    padding: 0;
+  }
+}
+
 /* For small devices */
 @media screen and (max-width: 350px) {
     .services__container {
