--- a/src/Components/portfolio/portfolio.css
+++ b/src/Components/portfolio/portfolio.css
@@ -3,16 +3,6 @@
   margin-bottom: 10rem;
 }
 
-
-/* .recentWork__card {
-  background-color: var(--container-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  
-  border-radius: 1rem;
-  margin-bottom: var(--mb-3);
-  background-color: red;
-} */
-
 .work__holder{
   display: flex;
   flex-direction: column;
@@ -95,4 +85,19 @@
     padding: 1.25rem 1.5rem;
   }
 }
+
+
+
+@media screen and (max-width: 576px) {
+  
+.work-portfolio__description{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+}
+
+
+
 
