--- a/src/Components/header/header.css
+++ b/src/Components/header/header.css
@@ -52,6 +52,11 @@
 .active-link,
 .nav__link:hover {
   color: #7ac16f;
+}
+
+.active-link,
+.nav__link:active {
+  color: #7ac16f;
   border-bottom:3px solid #7ac16f;
 }
 
