--- a/src/Components/portfolio/portfolio.css
+++ b/src/Components/portfolio/portfolio.css
@@ -28,12 +28,13 @@
   flex-direction: column;
   align-items: center;
   text-align: justify;
+  font-size: var(--small-font-size);
 }
 
 .work__name{
   margin-bottom: var(--mb-1);
-  font-size: var(--normal-font-size);
-  font-weight: var(--font-medium);
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-semi-bold);
 }
 
 .work__button{
@@ -84,6 +85,13 @@
   .recentWork__card{
     padding: 1.25rem 1.5rem;
   }
+
+  .work__name{
+  margin-bottom: var(--mb-1);
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-semi-bold);
+}
+
 }
 
 
@@ -96,6 +104,9 @@
   align-items: center;
   text-align: center;
 }
+
+
+
 }
 
 
