--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -42,6 +42,21 @@
   color: #517d4a;
 }
 
+.home__inner{
+  display: flex;
+  align-items: center;
+}
+
+.home__inner span{
+  margin-left: 5px;
+  font-weight: 700;
+}
+
+.home__inner p{
+  color: #161616;
+  font-weight: 500;
+}
+
 .home__description {
   max-width: 400px;
   margin-bottom: var(--mb-3);
