add new skills and change images for better quality

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@
   --title-color-dark: hsl(var(--hue), var(--sat), 0%);
   --text-color: hsl(var(--hue), var(--sat), 46%);
   --body-color: hsl(var(--hue), var(--sat), 95%);
+  /* --body-color: #313131; */
   --container-color: #fff;
   --green-color: #517d4a;
   --lightgreen-color: #7ac16f;
