--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -72,7 +72,7 @@
 }
 
 .home__img{
-  background: url(../../assets/1964_ARELLANO_LENARD_ROY_CEA22439.JPG);
+  background: url(../../assets/beautiful_11zon.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow: 0px 0px 42px 1px #aaaaaa;
